--- a/projects/meetingcost/index.html
+++ b/projects/meetingcost/index.html
@@ -136,6 +136,7 @@
 		<!-- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script> -->
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="js/meetingcost.js"></script>
+		<script src="js/rates.js"></script>
 
 		<script type="text/javascript">
 $(function() {
