--- a/projects/meetingcost/index.html
+++ b/projects/meetingcost/index.html
@@ -76,10 +76,7 @@
 			<div class="add-chairs-container">
 
 				<div style="float:left; margin-right: 10px;">
-					<select class="form-control input-lg js-user-type-select" style="max-width: 250px;">
-						<option value="">(Choose participants)</option>
-						<option value="EC-02">EC-02</option>
-					</select>
+					<select class="form-control input-lg js-user-type-select" style="max-width: 250px;"></select>
 				</div>
 
 				<div style="float:left; margin-right: 10px;">
@@ -113,7 +110,7 @@
 
 	<% _.each(app.meetingCost.participants, function(value, index) { %>
 
-		<div class="chair js-remove-user" data-user-index="<%- index %>">
+		<div class="chair js-remove-user" data-user-index="<%- index %>" title="<%- value.label %> <%- value.description %>">
 			<i class="fa fa-user fa-3x" aria-hidden="true"></i>
 			<span class="chair-label"><%- value.label %></span>
 		</div>
@@ -121,6 +118,19 @@
 	<% }) %>
 
 <% } %>
+
+
+</script>
+
+<script type="text/template" id="ratesSelectTemplate">
+
+<option value="">(Choose participants)</option>
+
+<% _.each(app.rates, function(value, index) { %>
+
+	<option value="<%- value.label %>"><%- value.label %> <%- value.description %></option>
+
+<% }) %>
 
 
 </script>
