Re-worked downloads section at the bottom

--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -286,9 +286,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 <p>2 pages</p>
 <p>Positioning of this consultation as the beginning of an ongoing conversation to build a Made-in-Canada approach to digital government that will require sharing experiences and learnings from all levels of government and with private, academic, and community sector partners. Provide options to keep in touch with the team (email, Twitter handles, etc.); include a moderated comment functionality on the site to allow for readers to post feedback and discuss the report on the site (similar to what is currently available on the open.canada.ca site).</p>
 
-<p>&nbsp;</p>
-<p><strong>Annex A. International Digital Government Research</strong></p>
 
+<h3>For more information</h3>
 <div class="row">
 	<div class="col-sm-6">
 		<a class="gc-dwnld-lnk" href="#">
@@ -298,19 +297,14 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 						<p><img class="img-responsive thumbnail gc-dwnld-img" src="//wet-boew.github.io/themes-dist/GCWeb/img/doc.png" alt="[Document icon]"></p>
 						</div>
 						<div class="col-xs-8">
-						<p class="gc-dwnld-txt"><span>One-page overview of international examples (UK, US, Auz, NZ, Estonia, Denmark, Singapore)</span>
+						<p class="gc-dwnld-txt"><span>International Digital Government Research – One-page overview of international examples (UK, US, Auz, NZ, Estonia, Denmark, Singapore)</span>
 						<span class="gc-dwnld-info">[<abbr title="Portable Document Format">PDF</abbr> - 2<abbr title="Megabyte">MB</abbr>]</span></p>
 					</div>
 				</div>
 			</div>
 		</a>
 	</div>
-</div>
 
-
-<p><strong>Annex B. TBS Digital Government Consultation Presentation</strong></p>
-
-<div class="row">
 	<div class="col-sm-6">
 		<a class="gc-dwnld-lnk" href="#">
 			<div class="well gc-dwnld">
@@ -319,7 +313,7 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 						<p><img class="img-responsive thumbnail gc-dwnld-img" src="//wet-boew.github.io/themes-dist/GCWeb/img/doc.png" alt="[Document icon]"></p>
 						</div>
 						<div class="col-xs-8">
-						<p class="gc-dwnld-txt"><span>Digital Government consultation presentation (12 slides)</span>
+						<p class="gc-dwnld-txt"><span>TBS Digital Government Consultation Presentation (12 slides)</span>
 						<span class="gc-dwnld-info">[<abbr title="Portable Document Format">PDF</abbr> - 6<abbr title="Megabyte">MB</abbr>]</span></p>
 					</div>
 				</div>
