Sample comments display

--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -147,6 +147,24 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 	}
 
 
+	/* Comments from open.canada.ca */
+	/*http://open.canada.ca/sites/all/modules/custom/opendata_blog/css/images/icons/comment.png*/
+	.comment .links .comment-reply a {
+	    background: url(//open.canada.ca/sites/all/modules/custom/opendata_blog/css/images/icons/comment.png) left bottom no-repeat;
+	}
+
+	.comment .links a {
+	    padding: 2px 0 2px 22px;
+	    text-decoration: none;
+	    color: #3e7bab;
+	}
+
+	.comment .comment-author, form.comment-form .username {
+	    font-weight: bold;
+	    color: #086CA2;
+	}
+
+
 </style>
 
 <h1 property="name" id="wb-cont">Digital Government &ldquo;What We Heard&rdquo; report</h1>
@@ -324,6 +342,142 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 
 
 <p>&nbsp;</p>
+
+
+<div class="panel-separator"></div>
+<div class="well well-md panel-pane pane-node-comment-form">
+
+	<div class="pane-title">
+	<h2 style="margin-top: 10px;">Add comment <span>*</span></h2></div>
+
+
+	<div class="pane-content">
+		<form class="comment-form" action="/en/blog/site-improvements-nearly-invisible-worth-noting#comment-form" method="post" id="comment-form--2" accept-charset="UTF-8"><div><div class="form-item form-item-name form-type-textfield form-group"> <label class="control-label" for="edit-name--2" id="edit-name--2-label">Your name</label>
+		<input class="form-control form-text" type="text" id="edit-name--2" name="name" value="" size="30" maxlength="60"></div><div class="field-type-text-long field-name-comment-body field-widget-text-textarea form-wrapper form-group" id="edit-comment-body--2"><div id="comment-body-add-more-wrapper--2"><div class="text-format-wrapper"><div class="form-item form-item-comment-body-und-0-value form-type-textarea form-group"> <label class="control-label" for="edit-comment-body-und-0-value--2" id="edit-comment-body-und-0-value--2-label">Comment <span class="form-required" title="This field is required.">*</span></label>
+		<div class="form-textarea-wrapper resizable textarea-processed resizable-textarea"><textarea class="text-full wysiwyg form-control form-textarea required" id="edit-comment-body-und-0-value--2" name="comment_body[und][0][value]" cols="60" rows="5"></textarea><div class="grippie"></div></div></div><div class="format-toggle clearfix"></div><div class="clearfix"></div></div>
+		</div></div><input type="hidden" name="form_build_id" value="form-rR5xT3pp2dkjbRxvshVxoHLjZhxcZ4idpNIJrz3i_w0">
+		<input type="hidden" name="form_id" value="comment_node_blog_post_form">
+		<input type="hidden" name="honeypot_time" value="1487348104">
+		
+		<!-- <div class="element-invisible"><div class="form-item form-item-smplntspm2 form-type-checkbox checkbox"> <label class="control-label" for="edit-smplntspm2--2" id="edit-smplntspm2--2-label"><input type="checkbox" id="edit-smplntspm2--2" name="smplntspm2" value="1" aria-labelledby="edit-smplntspm2-label edit-smplntspm2--2-label" class="form-checkbox">I'm a spammer</label></div></div> -->
+
+		<div class="form-item form-item-smplntspm1 form-type-checkbox checkbox"> <label class="control-label" for="edit-smplntspm1--2" id="edit-smplntspm1--2-label"><input type="checkbox" id="edit-smplntspm1--2" name="smplntspm1" value="1" aria-labelledby="edit-smplntspm1-label edit-smplntspm1--2-label" class="form-checkbox">Please prove that you are not a robot</label>
+		</div><div class="url-textfield"><div class="form-item form-item-url form-type-textfield form-group"> <label class="control-label" for="edit-url--2" id="edit-url--2-label">Leave this field blank</label>
+		<input autocomplete="off" class="form-control form-text" type="text" id="edit-url--2" name="url" value="" size="20" maxlength="128"></div></div><div class="form-actions form-wrapper form-group" id="edit-actions--2"><button type="submit" id="edit-submit--2" name="op" value="Submit" class="btn btn-primary form-submit">Submit</button>
+		</div></div></form>  
+	</div>
+
+
+</div>
+<div class="panel-separator"></div>
+
+<div class="panel-pane pane-block pane-bean-webform-privacy-notice mrgn-tp-lg">
+
+	<div class="pane-content">
+	<section>
+	<div class="field field-name-field-bean-wetkit-body field-type-text-long field-label-hidden"><div class="field-items"><div class="field-item even"><div class="module-info module-simplify">
+	<div class="alert alert-info">
+	<p>Provision of the information requested on this form is voluntary. The information is being collected for the purpose of responding to your inquiry or comments, and to improve our suite of online products and services. Personal information that you provide is protected under the provisions of the federal <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>. Please <strong>do not include sensitive personal information</strong> in the message, such as your Social Insurance Number, personal finance data and medical or work history.</p>
+
+	<div class="clear">&nbsp;</div>
+
+	<div class="mrgn-rght-lg mrgn-lft-0">
+	<details><summary class="bg-primary mrgn-bttm-md">Read the Privacy Statement for this Website.</summary><p>The collection and use of your personal information is authorized by the section 7 of the Financial Administrative Act. Collection and use of your personal information for data.gc.ca is in accordance with the federal <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>. Your personal information is used to respond to your inquiries, if applicable, and may be used to evaluate the effectiveness of the program in responding to client needs. In exceptional circumstances (e.g., investigation of hackers, or of individuals who make abusive remarks or threats, etc.), personal information may be disclosed without your consent pursuant to subsection 8(2) of the <em>Privacy Act</em>.</p>
+
+	<p>Any personal information that may be collected is described in the Standard Personal Information Bank entitled Public Communications, PSU 914, which can be found in the Treasury Board of Canada Secretariat (TBS) publication: <a href="http://www.infosource.gc.ca/index-eng.asp"><em>InfoSource</em></a>. The personal information collected will only be kept by TBS for a period of eighteen months of the completion of activity after which all personal identifiers will be deleted.</p>
+
+	<p>Under the <em>Privacy Act</em>, you have the right of access to, and correction of, your personal information, if you have provided any. Note however, that to exercise either of these rights, you must make a request for access to your personal information before the retention period has expired. For more information about your right of access, please read <a href="http://www.infosource.gc.ca/emp/emp01-eng.asp">About the Access to information Program</a>.</p>
+
+	<p>If you require clarification about this Statement, contact the TBS Privacy Coordinator at 613-957-7154. For more information about your privacy rights and the <em>Privacy Act</em>, consult the Privacy Commissioner through the <a href="https://www.priv.gc.ca/index_e.asp">Office of the Privacy Commissioner of Canada website</a> or 1-800-282-1376.</p>
+	</details></div>
+	</div>
+	</div>
+	</div></div></div></section>
+	</div>
+
+
+</div>
+<div class="panel-separator"></div>
+
+<div class="panel-pane pane-node-comments mrgn-tp-lg">
+
+
+
+	<div class="pane-content">
+	<a id="comment-19054"></a>
+	<article class="well well-md comment comment-by-anonymous clearfix">
+
+	<header>
+	</header>
+
+	<footer>
+	<p class="author-datetime"><span class="comment-author">Jaimejeopy</span><span class="comment-datetime"> - Jan 18, 2017</span></p>
+
+	<nav><ul class="links list-inline"><li class="comment-reply first last"><a href="/en/comment/reply/567144/19054">reply</a></li>
+	</ul></nav>
+	<div class="clear"></div>
+	</footer>
+
+	<div>
+	<div class="field field-name-comment-body field-type-text-long field-label-hidden"><div class="field-items"><div class="field-item even"><p>Good post! I read your blog often and you always post excellent content. I posted this article on Facebook and my followers like it. Thanks for writing this!</p>
+	</div></div></div>  </div>
+
+
+
+	<div class="clearfix"></div>
+	</article>
+	<a id="comment-18955"></a>
+	<article class="well well-md comment comment-by-anonymous clearfix">
+
+	<header>
+	</header>
+
+	<footer>
+	<p class="author-datetime"><span class="comment-author">Amandadox</span><span class="comment-datetime"> - Jan 13, 2017</span></p>
+
+	<nav><ul class="links list-inline"><li class="comment-reply first last"><a href="/en/comment/reply/567144/18955">reply</a></li>
+	</ul></nav>
+	<div class="clear"></div>
+	</footer>
+
+	<div>
+	<div class="field field-name-comment-body field-type-text-long field-label-hidden"><div class="field-items"><div class="field-item even"><p>Hello, you used to write magnificent, but the last several posts have been kinda boring… I miss your great writings. Past few posts are just a little bit out of track! come on!</p>
+	</div></div></div>  </div>
+
+
+
+	<div class="clearfix"></div>
+	</article>
+
+	<div class="indented" style="margin-left: 20px;"><a id="comment-18999"></a>
+	<article class="well well-md comment clearfix">
+
+	<header>
+	</header>
+
+	<footer>
+	<p class="author-datetime"><span class="comment-author">open-ouvert</span><span class="comment-datetime"> - Jan 16, 2017</span></p>
+
+	<nav><ul class="links list-inline"><li class="comment-reply first last"><a href="/en/comment/reply/567144/18999">reply</a></li>
+	</ul></nav>
+	<div class="clear"></div>
+	</footer>
+
+	<div>
+	<div class="field field-name-comment-body field-type-text-long field-label-hidden"><div class="field-items"><div class="field-item even"><p>Thanks for your comment Amandadox - we appreciate the feedback!<br>
+	If there are specific topics you think we should try to cover, please let us know.<br>
+	Karin - the open-ouvert team</p>
+	</div></div></div>  </div>
+
+
+
+	<div class="clearfix"></div>
+	</article>
+	</div>  
+	</div>
+
+
+</div>
 
 
 
