Sample background image

--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -146,6 +146,13 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		position:relative;
 	}
 
+	.heading-container.sky {
+		background: url(img/flight-mountains.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 150px;
+
+	}
+
 
 	/* Comments from open.canada.ca */
 	/*http://open.canada.ca/sites/all/modules/custom/opendata_blog/css/images/icons/comment.png*/
@@ -170,7 +177,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <h1 property="name" id="wb-cont">Digital Government &ldquo;What We Heard&rdquo; report</h1>
 
 
-<div class="heading-container">
+<div class="heading-container sky">
 	<h2 style="font-size: 42px;">
 		<span class="wrap">
 			<span class="inner">
