--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Digital Government “What We Heard” report</title>
+<title>Digital Government consultation report</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <!-- Meta data -->
 <meta name="description" content="This theme implements the layout and design requirements for Canada.ca.">
@@ -116,7 +116,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 <!-- <li>
 <a href="http://wet-boew.github.io/wet-boew/docs/ref/themesstyle-en.html">Themes</a>
 </li> -->
-<li>Digital Government &ldquo;What We Heard&rdquo; report</li>
+<li>Digital Government consultation report</li>
 </ol>
 </div>
 </div>
@@ -126,25 +126,131 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 <style type="text/css">
 	
+	.heading-container {
+		width: 100%;
+		padding: 50px;
+		margin-top: 32px;
+		margin-bottom: 32px;
+		background-color: #333;
+	}
+
+
+	.heading-container h2 {
+		font-size: 40px;
+		color: #fff; 
+
+	}
+
 
 
 	.heading-container.sky {
-		background: url(img/flight-mountains.jpg) no-repeat center right #333;
+		background: url(img/horizon-2.jpg) no-repeat center right #333;
 		background-size: cover;
 		padding-top: 150px;
 		padding-bottom: 30px;
 
 	}
 
+	.heading-container.sky .padded-multiline span {
+		background-color: #2a3a4b;
+	}
+
+	.heading-container.gds {
+		background: url(img/gds-work-2.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.gds .padded-multiline span {
+		background-color: #1a3346;
+	}
+
+	.heading-container.hub {
+		background: url(img/hub-ottawa-3.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.hub .padded-multiline span {
+		background-color: #182d3f;
+	}
+
+	.heading-container.calgary {
+		background: url(img/calgary-1.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.calgary .padded-multiline span {
+		background-color: #231d4a;
+	}
+
+	.heading-container.pei {
+		background: url(img/pei-startupzone-1.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.pei .padded-multiline span {
+		background-color: #0b235a;
+	}
+
+	.heading-container.montreal {
+		background: url(img/quebec-construction.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.montreal .padded-multiline span {
+		background-color: #8d0c13;
+	}
+
+	.heading-container.vancouver {
+		background: url(img/vancouver.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.vancouver .padded-multiline span {
+		background-color: #4a6656;
+	}
+
+	.heading-container.ottawa {
+		background: url(img/airport.jpg) no-repeat center right #333;
+		background-size: cover;
+		padding-top: 170px;
+		padding-bottom: 30px;
+
+	}
+
+	.heading-container.ottawa .padded-multiline span {
+		background-color: #5c3b4b;
+	}
+
+	/* Thanks to 
+	https://css-tricks.com/multi-line-padded-text/
+	*/
 	.padded-multiline { 
 	  line-height: 1.4; 
 	  padding: 2px 0; 
-	  width: 400px;
-	  margin: 20px;
-	  margin-left: 120px;
+	  width: 500px;
+	 /* margin: 20px;
+	  margin-left: 40px;*/
 	}
 	.padded-multiline span { 
-	  background-color: #333;
+	  background-color: #3a3a3a;
 	  color: #fff; 
 	  display: inline;
 	  padding: 0.55rem;
@@ -174,7 +280,7 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 
 </style>
 
-<h1 property="name" id="wb-cont">Digital Government &ldquo;What We Heard&rdquo; report</h1>
+<h1 property="name" id="wb-cont">Digital Government consultation report</h1>
 
 
 <div class="heading-container sky">
@@ -196,8 +302,8 @@ Top-level overview of impetus for consultation, where visited and who talked to,
 </p>
 
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container gds">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Why Digital Government?</span>
 		</span>
@@ -211,8 +317,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 
 
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container hub">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Starting a Conversation on a Made-in-Canada Approach</span>
 		</span>
@@ -224,8 +330,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 
 
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container calgary">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Organizing to Deliver Digital</span>
 		</span>
@@ -244,8 +350,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 </ul>
 
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container pei">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Digital Talent</span>
 		</span>
@@ -263,8 +369,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 <li>How do we leverage the talent we have in government already, enable innovation from within, strengthen it with external talent, help to integrate external talent</li>
 </ul>
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container montreal">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Digital Service Design and Delivery</span>
 		</span>
@@ -281,8 +387,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 <li>Need for someone to play a central role in scaling innovation, connecting the dots&nbsp;</li>
 </ul>
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container vancouver">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Putting in Place the Right Foundations</span>
 		</span>
@@ -298,8 +404,8 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 <li>Broader digital literacy needed within government to ensure better decision-making&nbsp;</li>
 </ul>
 
-<div class="heading-container">
-	<h2>
+<div class="heading-container ottawa">
+	<h2 class="padded-multiline">
 		<span class="wrap">
 			<span class="inner">Continuing the Conversation</span>
 		</span>
