Comment samples added

--- a/projects/wxt-testrun/sample-post.html
+++ b/projects/wxt-testrun/sample-post.html
@@ -239,6 +239,51 @@ wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licenc
 		background-color: #5c3b4b;
 	}
 
+
+	/*Comment sidebars*/
+	.comment-panel.pull-right {
+		margin-left: 20px;
+	}
+	.comment-panel.pull-left {
+		margin-right: 20px;
+	}
+	.comment-panel {
+		color: #fff;
+		color: #fff;
+		border-bottom: 4px solid #1a3346;
+		margin-bottom: 20px;
+		padding: 20px;
+	}
+
+
+	.comment-panel.gds {
+		
+		border-color: #1a3346;
+		background-color: #4c97a1;
+		
+	}
+
+	.comment-panel.ottawa {
+		
+		background-color: #248d56;
+		border-color: #182d3f;
+
+	}
+
+	.comment-panel.pei {
+		
+		background-color: #3163b5;
+		border-color: #0b235a;
+
+	}
+
+	.comment-panel.vancouver {
+		
+		background-color: #547267;
+		border-color: #4a6656;
+
+	}
+
 	/* Thanks to 
 	https://css-tricks.com/multi-line-padded-text/
 	*/
@@ -327,9 +372,19 @@ Overview of what is Digital Government, major trends, brief snapshot of what oth
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim. Morbi venenatis felis elit, et cursus lorem semper et. Nunc pulvinar ut sapien in aliquet. Praesent feugiat faucibus metus, eget commodo dui interdum quis. Maecenas hendrerit nec sem id maximus. Donec dictum mi nisl, in commodo est porta tempus. Cras lacinia elit vitae dui aliquam, vulputate imperdiet justo ullamcorper. Proin sit amet vulputate tortor, eu dignissim justo. Vivamus mollis, ante nec scelerisque facilisis, nunc purus vestibulum purus, et sodales odio urna eu elit. Integer at cursus ante. Suspendisse scelerisque, augue id aliquet lacinia, purus metus vehicula elit, a molestie orci tortor porta lacus.
 </p>
+
+<div class="col-md-4 pull-right comment-panel gds">
+<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim.&rdquo;</p>
+
+<footer>&mdash; Montreal consultation</footer>
+</div>
+
 <p>
 Suspendisse consectetur nibh mi, eget consectetur tortor ultricies eget. Aliquam at pellentesque nisi, non finibus dolor. Morbi posuere dolor dui, ac ultricies ipsum aliquam vel. Sed egestas turpis risus, vitae suscipit diam finibus eu. Proin consequat eros sed enim semper, et ultricies dui ultricies. Ut massa sapien, hendrerit vel nunc sit amet, porttitor ultrices augue. Vestibulum varius justo eu odio consequat sagittis. Nunc pulvinar felis vitae maximus placerat. Cras maximus egestas turpis dignissim euismod. Nullam quis mi semper, convallis metus non, tempus elit. Sed sed venenatis nulla. Ut ut mi et arcu bibendum vestibulum vitae quis arcu.
 </p>
+
+
+
 <p>
 Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. Suspendisse nisi nisl, laoreet a justo a, tincidunt volutpat lectus. Duis sagittis nec nisl eget gravida. Morbi nec finibus quam, non suscipit massa. Fusce ut pharetra ipsum, ac aliquet risus. Fusce hendrerit leo nec semper blandit. Duis accumsan dignissim urna a luctus. Proin porttitor sem id urna porttitor, ut finibus est ullamcorper. Mauris velit tellus, viverra sit amet nunc nec, euismod mattis dui. Nam eget orci sagittis, tempor neque ut, pretium arcu. Quisque quis ex fringilla, euismod orci vitae, egestas risus. Aliquam ut metus vitae nunc maximus luctus. Morbi mi mi, tristique id purus porta, venenatis dignissim lectus.
 </p>
@@ -361,6 +416,13 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim. Morbi venenatis felis elit, et cursus lorem semper et. Nunc pulvinar ut sapien in aliquet. Praesent feugiat faucibus metus, eget commodo dui interdum quis. Maecenas hendrerit nec sem id maximus. Donec dictum mi nisl, in commodo est porta tempus. Cras lacinia elit vitae dui aliquam, vulputate imperdiet justo ullamcorper. Proin sit amet vulputate tortor, eu dignissim justo. Vivamus mollis, ante nec scelerisque facilisis, nunc purus vestibulum purus, et sodales odio urna eu elit. Integer at cursus ante. Suspendisse scelerisque, augue id aliquet lacinia, purus metus vehicula elit, a molestie orci tortor porta lacus.
 </p>
+
+<div class="col-md-4 pull-left comment-panel ottawa">
+<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim.&rdquo;</p>
+
+<footer>&mdash; Ottawa consultation</footer>
+</div>
+
 <p>
 Suspendisse consectetur nibh mi, eget consectetur tortor ultricies eget. Aliquam at pellentesque nisi, non finibus dolor. Morbi posuere dolor dui, ac ultricies ipsum aliquam vel. Sed egestas turpis risus, vitae suscipit diam finibus eu. Proin consequat eros sed enim semper, et ultricies dui ultricies. Ut massa sapien, hendrerit vel nunc sit amet, porttitor ultrices augue. Vestibulum varius justo eu odio consequat sagittis. Nunc pulvinar felis vitae maximus placerat. Cras maximus egestas turpis dignissim euismod. Nullam quis mi semper, convallis metus non, tempus elit. Sed sed venenatis nulla. Ut ut mi et arcu bibendum vestibulum vitae quis arcu.
 </p>
@@ -421,6 +483,13 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim. Morbi venenatis felis elit, et cursus lorem semper et. Nunc pulvinar ut sapien in aliquet. Praesent feugiat faucibus metus, eget commodo dui interdum quis. Maecenas hendrerit nec sem id maximus. Donec dictum mi nisl, in commodo est porta tempus. Cras lacinia elit vitae dui aliquam, vulputate imperdiet justo ullamcorper. Proin sit amet vulputate tortor, eu dignissim justo. Vivamus mollis, ante nec scelerisque facilisis, nunc purus vestibulum purus, et sodales odio urna eu elit. Integer at cursus ante. Suspendisse scelerisque, augue id aliquet lacinia, purus metus vehicula elit, a molestie orci tortor porta lacus.
 </p>
+
+<div class="col-md-4 pull-right comment-panel pei">
+<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim.&rdquo;</p>
+
+<footer>&mdash; PEI consultation</footer>
+</div>
+
 <p>
 Suspendisse consectetur nibh mi, eget consectetur tortor ultricies eget. Aliquam at pellentesque nisi, non finibus dolor. Morbi posuere dolor dui, ac ultricies ipsum aliquam vel. Sed egestas turpis risus, vitae suscipit diam finibus eu. Proin consequat eros sed enim semper, et ultricies dui ultricies. Ut massa sapien, hendrerit vel nunc sit amet, porttitor ultrices augue. Vestibulum varius justo eu odio consequat sagittis. Nunc pulvinar felis vitae maximus placerat. Cras maximus egestas turpis dignissim euismod. Nullam quis mi semper, convallis metus non, tempus elit. Sed sed venenatis nulla. Ut ut mi et arcu bibendum vestibulum vitae quis arcu.
 </p>
@@ -477,6 +546,13 @@ Nunc sed volutpat lacus. Pellentesque lacinia augue quis nibh sodales lacinia. S
 <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim. Morbi venenatis felis elit, et cursus lorem semper et. Nunc pulvinar ut sapien in aliquet. Praesent feugiat faucibus metus, eget commodo dui interdum quis. Maecenas hendrerit nec sem id maximus. Donec dictum mi nisl, in commodo est porta tempus. Cras lacinia elit vitae dui aliquam, vulputate imperdiet justo ullamcorper. Proin sit amet vulputate tortor, eu dignissim justo. Vivamus mollis, ante nec scelerisque facilisis, nunc purus vestibulum purus, et sodales odio urna eu elit. Integer at cursus ante. Suspendisse scelerisque, augue id aliquet lacinia, purus metus vehicula elit, a molestie orci tortor porta lacus.
 </p>
+
+<div class="col-md-4 pull-right comment-panel vancouver">
+<p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum cursus turpis, a placerat orci porttitor in. Nunc pulvinar, leo in congue suscipit, quam mi pharetra nisi, quis tempor velit odio sed enim.&rdquo;</p>
+
+<footer>&mdash; Vancouver consultation</footer>
+</div>
+
 <p>
 Suspendisse consectetur nibh mi, eget consectetur tortor ultricies eget. Aliquam at pellentesque nisi, non finibus dolor. Morbi posuere dolor dui, ac ultricies ipsum aliquam vel. Sed egestas turpis risus, vitae suscipit diam finibus eu. Proin consequat eros sed enim semper, et ultricies dui ultricies. Ut massa sapien, hendrerit vel nunc sit amet, porttitor ultrices augue. Vestibulum varius justo eu odio consequat sagittis. Nunc pulvinar felis vitae maximus placerat. Cras maximus egestas turpis dignissim euismod. Nullam quis mi semper, convallis metus non, tempus elit. Sed sed venenatis nulla. Ut ut mi et arcu bibendum vestibulum vitae quis arcu.
 </p>
